syntax = "proto3";

import "publickey.proto";

option java_package = "com.exonum.binding.cryptocurrency.transactions";
option java_outer_classname = "TxMessagesProtos";

message TransferTx {
  int64 seed = 1;
  PublicKey fromWallet = 2;
  PublicKey toWallet = 3;
  int64 sum = 4;
}

message CreateWalletTx {
  PublicKey ownerPublicKey = 1;
}
